@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- fix GEOMTRANSFORM rotation orientation for vector symbols (#3802)
+
 - GD Driver broken in FastCGI (#3813)
 
 - configure: look for libexslt.so under lib64 as well
